<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_banner"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_main_activity" />

    <Button
        android:id="@+id/btnReadSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_read_sms" />

    <Button
        android:id="@+id/btnInsertSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_insert_sms" />

    <Button
        android:id="@+id/btnListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_list_view" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact" />

    <Button
        android:id="@+id/btnVG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_vg" />

    <!-- <include -->
        <!-- android:id="@+id/toolbar" -->
        <!-- layout="@layout/toolbar" /> -->

</LinearLayout>
